<resources>
    <string name="app_name">Apne Saathi</string>
    <string name="select_language">Select Language</string>
    <string name="english_text">English</string>
    <string name="hindi_text">Hindi</string>
    <string name="marathi_text">Marathi</string>
    <string name="gujrati_text">Gujarati</string>
    <string name="aasammi_text">Assamese</string>
    <string name="submit">Submit</string>
    <string name="permission_detail">Permission Detail</string>
    <string name="permission_text">App has feature that with just a single click on Senior citizen details you can initiate a regular call on daily basis.For that we will require CALL permission.</string>
    <string name="accept">Accept</string>
    <string name="not_now">Not now</string>
    <string name="txtenterMobilenumbe">Enter mobile number</string>
    <string name="txtValidmobilenumber">Enter valid mobile number</string>
    <string name="txtlogin">Login</string>
    <string name="txtmobileNumber">Mobile Number</string>
    <string name="verificationcode">Enter Verification Code</string>
    <string name="wehavesendverificaiton_code">We have send a 4 digit verification code on</string>
    <string name="senderNumber">+91 9673346489</string>
    <string name="verify">verify</string>
    <string name="donthave_receive_resend">Did\t recive any code ? Re-send</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="covid_symptoms">Covid Symptoms</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other_medical_problems">Other Medical Problems</string>
    <string name="complaints">Complaints</string>
    <string name="calls_information">CALLS INFORMATION</string>
    <string name="call_type">Call Type</string>
    <string name="update"><u>Update</u></string>
    <string name="call_received_by">Call Received By</string>
    <string name="appbar_title">SENIOR CITIZEN DATA</string>
    <string name="register_a_new_citizen">Register new citizen</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="feedback">Feedback</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_volunteers">Volunteers</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_profile">Profile</string>
    <string name="pending_calls_count">Pending Calls(%s)</string>
    <string name="grievances_count">Grievances(%s)</string>
    <string name="issues_count">Issues(%s)</string>
    <string name="follow_up_count">Follow Up(%s)</string>
    <string name="attended_calls_count">Attended Calls(%s)</string>
    <string name="invalid_calls_count">Invalid Calls(%s)</string>
    <string name="pending_calls">Pending Calls</string>
    <string name="grievances">Grievances</string>
    <string name="follow_up">Follow Up</string>
    <string name="attended_calls">Attended Calls</string>
    <string name="see_all">See All</string>
    <string name="letsgetstarted">Let\'s get started</string>
    <string name="logindescription">Enter your mobile number, we will send you OTP to verify later</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="resendcode">Resend code in 0:30</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="attended">Attended</string>
    <string name="not_attended">Not Attended</string>
    <string-array name="call_status">
        <item>@string/connected</item>
        <item>@string/call_dropped</item>
        <item>@string/not_picked_single_line</item>
        <item>@string/not_reachable_single_line</item>
        <item>@string/dis_connected</item>
        <item>@string/wrong_number</item>
        <item>@string/call_later</item>
        <item>@string/number_busy</item>
        <item>@string/number_not_existing</item>
    </string-array>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="shortness_of_breath">Shortness of\nbreath</string>
    <string name="sore_throat">Sore \nthroat</string>
    <string name="type_here">Type here…</string>
    <string name="grivence">Grivence</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="address_bold">Address: </string>
    <string name="unattended">Unattended</string>
    <string name="edit">Edit</string>
    <string name="app_bar_title">Sr. Citizen details</string>
    <string name="txtSubmit">Submit</string>
    <string name="call_status_1">Call Status</string>
    <string name="all_calls">All Calls</string>
    <string name="resolved">Resolved</string>
    <string name="pending">Pending</string>
    <string name="pending_count">Pending(%s)</string>
    <string name="details_fragment">seniorCitizen detail fragment</string>
    <string name="select_a_category">Select a category</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="other_important_information">Other important information</string>
    <string name="edit_fragment">Edit fragment</string>
    <string name="select_a_call_status">Select a call status</string>
    <string name="quarantine_hospitalization_status">Quarantine/Hospitalization Status</string>
    <string name="select_status">Select a status</string>
    <string name="category">Category</string>
    <string name="medical_details">Medical Details</string>
    <string name="grievance_information">Grievance Information</string>
    <string name="other_problems">Other problems</string>
    <string name="no_problems">No problems</string>
    <string name="diabetes">Diabetes</string>
    <string name="arthritis">Arthritis</string>
    <string name="kidney_and_bladder_pbm">Kidney and bladder problems</string>
    <string name="glaucoma">Glaucoma</string>
    <string name="parkinson">Parkinson\'s disease</string>
    <string name="cataracts">Cataracts</string>
    <string name="no_response">No\nResponse</string>
    <string name="no_response_single_line">No Response</string>
    <string name="phone_not_picked">Phone not picked</string>
    <string name="phone_not_reachable">Phone not reachable</string>
    <string name="call_disconnected">Call disconnected</string>
    <string name="home_quarantine">Yes, home quarantine</string>
    <string name="government_quarantine">Yes, government quarantine</string>
    <string name="hospitalized">Yes, hospitalized</string>
    <string name="not_quarantined">Not quarantine or hospitalized</string>
    <string name="lack_of_food">Lack of food</string>
    <string name="lack_of_medicine">Lack of medicine</string>
    <string name="lack_of_banking_service">Lack of access to banking services</string>
    <string name="lack_of_utilities">Lack of utilities supply(water,electricity)</string>
    <string name="lack_of_hygine">Lack of hygiene and sanitation</string>
    <string name="lack_of_safety">Lack of safety</string>
    <string name="lack_of_access_emergency">Lack of access to emergency services (ambulance, helpline nos, etc.)</string>
    <string name="phone_and_service">Phone &amp; internet services</string>
    <string name="other_problems_reported">Other problems reported</string>
    <string name="other">Other</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="talked_with">Talked with</string>
    <string-array name="behavior_changes">
        <item>@string/yes</item>
        <item>@string/no</item>
        <item>@string/may_be</item>
        <item>@string/not_applicable</item>
    </string-array>
    <string-array name="other_medical_problems_list">
        <item>@string/covid_19_symptoms</item>
        <item>@string/non_covid_symptoms</item>
        <item>@string/no_problems</item>
    </string-array>
    <string-array name="gender_array">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
        <item>@string/gender_others</item>
    </string-array>
    <string name="personal_details">Personal Details</string>
    <string name="sr_citizen_follow_up">Sr. Citizen Follow up</string>
    <string name="not_picked">Not\nPicked</string>
    <string name="not_picked_single_line">Not Picked</string>
    <string name="not_reachable">Not\nReachable</string>
    <string name="not_reachable_single_line">Not Reachable</string>
    <string name="dis_connected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="medical_history">Medical history</string>
    <string-array name="medical_problems">
        <item>@string/no_problems</item>
        <item>@string/diabetes</item>
        <item>@string/blood_pressure</item>
        
        <item>@string/lung_ailment</item>
        
        <item>@string/cancer_major_surgery</item>
        
    </string-array>
    <string name="whom_did_you_talk_with">Whom did you talk with ?</string>
    <string name="medical_history_sr_citizen">Medical history of Sr. Citizen</string>
    <string name="behavior_change_practice">Did the respondent take up the behavior change practices shared with them ?</string>
    <string name="info_you_talked_about">Related info you talked about</string>
    <string name="prevention">Prevention</string>
    <string name="access">Access</string>
    <string name="status">Status</string>
    <string name="detection">Detection</string>
    <string name="covid_19_symptoms">COVID-19 Symptoms</string>
    <string name="non_covid_symptoms">Non-covid medical problems</string>
    <string name="select_category">Select category</string>
    <string name="gender">Gender</string>
    <string name="report_lack_of_essential_services">Report lack of Essential Services</string>
    <string name="sr_citizen_report_lack_of_essintial_services">Does the senior citizen report a lack of access to essential services ?</string>
    <string name="need_emergency_escalation">Is there a need for emergency and escalation ?</string>
    <string name="any_sr_citizen_in_home">Do you have any Senior Citizen in your home ?</string>
    <string name="new_sr_citizen_personal_details">New Sr. Citizen Person Details</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="community_member">Community Member</string>
    <string name="go_back">Go Back</string>
    <string name="okay">Okay</string>
    <string name="alert">Alert</string>
    <string name="data_not_saved">Do you want to leave this page without saving ?</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="sr_feedback_saved">Sr. citizen feedback data is saved Successfully</string>
    <string name="sr_citizen">Senior Citizen</string>
    <string name="family_member_of_sr_citizen">Family Member of Sr. Citizen</string>
    <string name="may_be">May be</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="txtaddPhoto">Add Photo</string>
    <string name="txttakePhoto">Take Photo</string>
    <string name="txtchoosefromgallry">Choose from Gallery</string>
    <string name="txtcancel">Cancel</string>
    <string name="select_a_state">Please select a state</string>
    <string name="password_text">Once you provide a password, you are all set to get into the app.</string>
    <string name="enter_password">Enter Password</string>
    <string name="select_district">Select District</string>
    <string name="volunteers">Volunteers</string>
</resources>