<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHome"
        android:checked="true"
        android:icon="@drawable/menu_home_selector"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuCalls"
        android:enabled="true"
        android:icon="@drawable/menu_calls_selector"
        android:title="@string/menu_calls"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuVolunteers"
        android:enabled="true"
        android:icon="@drawable/menu_volunteers_selector"
        android:title="@string/volunteers"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuGrievances"
        android:enabled="true"
        android:icon="@drawable/menu_notification_selector"
        android:title="@string/menu_issues"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuProfile"
        android:enabled="true"
        android:icon="@drawable/menu_profile_selector"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>