<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginTop="@dimen/dimen_5"
        android:background="?android:actionBarItemBackground"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_10"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPasswordImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/view_size_78"
                android:contentDescription="@string/app_name"
                android:src="@drawable/otp_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="@dimen/dime120dp" />

            <TextView
                android:id="@+id/tvPasswordText"
                style="@style/TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_15"
                android:gravity="center"
                android:text="@string/password_text"
                app:layout_constraintTop_toBottomOf="@id/ivPasswordImage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_15"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@android:color/darker_gray"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextColor="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="A@x@ffrt6781"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_15"
                android:text="@string/txtlogin"
                android:textAllCaps="false"
                android:textSize="@dimen/text_15"
                app:backgroundTint="@color/btn_bg"
                app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>