<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarlayout"
        layout="@layout/include_appbar_layout_with_toolbar" />

    <TextView
        android:id="@+id/TxtNodata"
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_size_40"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="No Data Found"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_13"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/relDistrictLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarlayout"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/TxtState"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_size_40"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_10"
            android:drawablePadding="@dimen/dimen_5"
            android:text="@string/select_a_state"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textIsSelectable="false"
            android:textSize="@dimen/text_13"
            app:drawableEndCompat="@drawable/ic_astrix_icon" />

        <AutoCompleteTextView
            android:id="@+id/actState"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_48"
            android:layout_marginStart="@dimen/dimen_15"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_15"
            android:background="@drawable/bg_rectangle_border_form"
            android:completionThreshold="0"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:focusable="false"
            android:hint="@string/state"
            android:inputType="none|textNoSuggestions"
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_10"
            android:textColor="@color/color_dark_grey_txt"
            android:textIsSelectable="false"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/TxtDistrict"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_size_40"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_10"
            android:drawablePadding="@dimen/dimen_5"
            android:text="@string/select_district"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textIsSelectable="false"
            android:textSize="@dimen/text_13"
            app:drawableEndCompat="@drawable/ic_astrix_icon" />

        <AutoCompleteTextView
            android:id="@+id/actDistrict"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_48"
            android:layout_marginStart="@dimen/dimen_15"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_15"
            android:background="@drawable/bg_rectangle_border_form"
            android:completionThreshold="0"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:focusable="false"
            android:hint="@string/district"
            android:inputType="none|textNoSuggestions"
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_10"
            android:textColor="@color/color_dark_grey_txt"
            android:textIsSelectable="false"
            android:textSize="@dimen/text_14" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relDistrictLayout"
        android:layout_marginTop="@dimen/dimen_10"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</RelativeLayout>